# TR4_User_Manual

./: .gitignore  README.md  bringup_guidence.md
src/TR4_description/: TR4_with_grippers.urdf
src/TR4_description/TR4_gripper_description/: CMakeLists.txt  package.xml
src/TR4_description/TR4_gripper_description/meshes/: base_link.STL  l_link1.STL  l_link2.STL  l_link3.STL  r_link1.STL  r_link2.STL  r_link3.STL
src/TR4_description/TR4_gripper_description/urdf/: TR4_gripper.urdf  zc_gripper_rev3.csv
src/TR4_description/TR4_gripper_description/xacro/: zc_gripper_rev3.marco.xacro
src/TR4_description/TR4_torso_description/: CMakeLists.txt  package.xml
src/TR4_description/TR4_torso_description/config/: joint_names_TR4_description_v2.yaml
src/TR4_description/TR4_torso_description/launch/: display.launch  gazebo.launch
src/TR4_description/TR4_torso_description/urdf/: TR4_description_v2.csv  TR4_torso.urdf
src/TR4_description/rm_65_b_description/: CMakeLists.txt  package.xml
src/TR4_description/rm_65_b_description/urdf/: rm_65_b.urdf
src/TR4_description/rm_65_b_description/xacro/: rm_65_b.marco.xacro
